<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
  
    
    <!--  EditText
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:text="işlem tipi" / -->

    <Button
        style="@style/AppTheme"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sum" />

    <Button
        android:layout_marginTop="100dp"
        android:layout_marginLeft="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_minus" />

    <Button
        android:layout_marginTop="100dp"
        android:layout_marginLeft="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply" />

    <Button
        android:layout_marginTop="100dp"
        android:layout_marginLeft="220dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_divide" />

    <Button
        style="@style/AppTheme"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="10dp"
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_veryEasy" />
    <Button
        style="@style/AppTheme"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="100dp"
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_easy" />
    <Button
        style="@style/AppTheme"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="160dp"
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_medium" />
    <Button
        style="@style/AppTheme"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="220dp"
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_some_hard" />
    <Button
        style="@style/AppTheme"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="290dp"
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_very_hard" />
    
    <Button
        style="@style/AppTheme"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="100dp"
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_prosesTypeSideBySide" />
    
    <Button
        style="@style/AppTheme"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="100dp"
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_prosesTypeSideBySide" />
    
    <Button
        style="@style/AppTheme"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="170dp"
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_prosesTypeTopButtom" />          
    
    

</RelativeLayout>